# TRIDENT

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  cspell.json  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
example/: example.fasta  example_pipeline.ipynb
src/trident/: __init__.py  logging.py
src/trident/clients/: __init__.py  bold.py  fasta.py  gbif.py  ncbi.py  worms.py
src/trident/core/: __init__.py  config.py  constants.py  database.py  http.py  sequence_selection.py  utils.py
src/trident/pipelines/: __init__.py  extra_pipeline.py  fasta_pipeline.py  geo_pipeline.py  hypo_pipeline.py  mol_pipeline.py  results_pipeline.py  tax_pipeline.py
src/trident/ui/: app.py  dashboard.py  defaults.py  extra.py  geo.py  hypo.py  inputs.py  launch.py  mol.py  results.py  tax.py  ui.py
tests/: test_bold.py  test_database.py  test_extra_pipeline.py  test_gbif.py  test_geo_classify.py  test_hypo_pipeline.py  test_mol_pipeline.py  test_ncbi_filter.py  test_ncbi_parse.py  test_results_pipeline.py  test_results_warning.py  test_sequence_selection.py  test_tax_pipeline.py  test_utils.py  test_worms.py
