[project]
name = "trident"
version = "0.1.0"
description = "Taxonomic Resolution and IDentification using Environmental dNa Traces"
readme = "README.md"
authors = [
    { name = "The TRIDENT authors", email = "trident-contact@protonmail.com" }
]
requires-python = ">=3.12,<3.13"
license = "LicenseRef-PolyForm-Strict-1.0.0"
license-files = ["LICENSE"]
dependencies = [
    "biopython>=1.85",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "numpy>=1.26",
    "pandas>=2.3.2",
    "plotly>=5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
]

[project.urls]
Homepage = "https://github.com/ISYEB-ADNe/TRIDENT"
Repository = "https://github.com/ISYEB-ADNe/TRIDENT"

[project.scripts]
trident = "trident.ui.launch:main"


[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbstripout>=0.8.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.codespell]
# Domain false positives: OTU (Operational Taxonomic Unit, as in "(M)OTU/ASV").
ignore-words-list = "OTU"
skip = "*.ipynb,uv.lock,*.lock,./results,./data"
